--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <header>
+    <header class="navbar">
         <nav href="#">
             <div class="nav_store">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48.92 56.48" class="nav_logo-icon">
