--- a/index.html
+++ b/index.html
@@ -78,9 +78,12 @@
         </div>
     </div>
 
+    <div class="containtModal"></div>
+
     <div id="loader">
         <div class="spinner"></div>
-      </div>
+    </div>
+
 </body>
 
 </html>
